--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -169,13 +169,13 @@ showtabs=false, tabsize=4}
 
 \section{Contexto}\label{contexto}\vspace{-1.0em}
 
-La \textbf{Ley por el Derecho a la Vivienda} se aprobó en España por decreto el 1 de febrero de 2022 y, aunque esta normativa no regula los pisos en venta ya construidos en la actualidad de forma directa, sí que podría afectar a su precio en el futuro. Por ejemplo, si se limita el precio del alquiler, se puede dar el caso de que los inversores dejen de estar interesados en estos bienes y por tanto, el precio final de venta variaría al cambiar la demanda. Por otro lado, el 30\% de las nuevas promociones se reservará a Viviendas de Protección Oficial (VPO), lo que también puede alterar el precio de la vivienda libre.
+La \textbf{Ley por el Derecho a la Vivienda} se aprobó en España por decreto el 1 de febrero de 2022 y, aunque esta normativa no regula los pisos en venta ya construidos en la actualidad de forma directa, sí que podría afectar a su precio en el futuro. Por ejemplo, si se limita el precio del alquiler, se puede dar el caso de que los inversores dejen de estar interesados en estos bienes y, por tanto, el precio final de venta variaría al cambiar la demanda. Por otro lado, el 30\% de las nuevas promociones se reservará a Viviendas de Protección Oficial (VPO), lo que también puede alterar el precio de la vivienda libre.
 
-Además de cambios en la normativa del mercado inmobiliario, la \textbf{invasión de Rusia a Ucrania} ha pillado por sorpresa a todos los sectores de la economía, disparando la \textbf{inflación} en España hasta un 9,8\%, según indicador adelantado del IPC para el mes de marzo publicado por el Instituto Nacional de Estadística (INE). Del mismo modo, el Banco de España ha recortado sus \textbf{previsiones de crecimiento} para el país y ha doblado su previsión anual de inflación al 7,5\%, según los datos publicados el 5 de abril de 2022.
+Además de cambios en la normativa del mercado inmobiliario, la \textbf{invasión de Rusia a Ucrania} ha pillado por sorpresa a todos los sectores de la economía, disparando la \textbf{inflación} en España hasta un 9,8\%, según el indicador adelantado del IPC para el mes de marzo publicado por el Instituto Nacional de Estadística (INE). Del mismo modo, el Banco de España ha recortado sus \textbf{previsiones de crecimiento} para el país y ha doblado su previsión anual de inflación al 7,5\%, según los datos publicados el 5 de abril de 2022.
 
 Asimismo, cabe destacar que el mercado inmobiliario en España se ha caracterizado desde hace décadas por las \textbf{diferencias en el precio} de la vivienda, tanto según las zonas del territorio nacional como dentro de las propias localidades. 
 
-Teniendo presente esta situación de cambios económicos y normativos, y no existiendo un registro público de viviendas en venta actualizado, se ha decidido obtener la información de las viviendas en venta de los portales inmobiliarios de \textbf{Idealista} y \textbf{Fotocasa}. Esta decisión se fundamenta en que son los portales \textbf{más visitados} en España, según los datos de febrero de \href{https://www.similarweb.com/top-websites/spain/category/business-and-consumer-services/real-estate/}{\textit{similarweb}}, que publica las métricas oficiales de los sitios web de todo el mundo. Además, esta clasificación de visitas se mantiene en los últimos años, por lo que no se prevé que varíe en un corto periodo de tiempo. Asimismo, es interesante que estos portales trabajan tanto con \textbf{inmobiliarias} como con \textbf{particulares} que desean vender inmuebles, por lo que proporcionan una información amplia sobre el tema de interés del proyecto.
+Teniendo presente esta situación de cambios económicos y normativos, y no existiendo un registro público de viviendas en venta actualizado, se ha decidido obtener la información de las viviendas en venta de los portales inmobiliarios de \textbf{Idealista} y \textbf{Fotocasa}. Esta decisión se fundamenta en que son los portales \textbf{más visitados} en España, según los datos de febrero de \href{https://www.similarweb.com/top-websites/spain/category/business-and-consumer-services/real-estate/}{\textit{\underline{similarweb}}}, que publica las métricas oficiales de los sitios web de todo el mundo. Además, esta clasificación de visitas se mantiene en los últimos años, por lo que no se prevé que varíe en un corto periodo de tiempo. Asimismo, es interesante que estos portales trabajan tanto con \textbf{inmobiliarias} como con \textbf{particulares} que desean vender inmuebles, por lo que proporcionan una información amplia sobre el tema de interés del proyecto.
 
 %\begin{center}
 %	\vspace{-0.5cm}
@@ -218,7 +218,7 @@ Los \textbf{anunciantes}, que pueden ser tanto propietarios particulares como in
 
 Los portales inmobiliarios ponen a disposición de los \textbf{compradores} dichos anuncios y ayudan a ponerles en contacto con los anunciantes, con los que cerrarán el trato fuera del portal.
 
-En \textbf{este proyecto} se analizan dichos portales inmobiliarios y se vuelca en el \textit{dataset} final la información de los anuncios sobre \textbf{viviendas en venta} en F\textbf{otocasa e Idealista}, en concreto de los distritos de \textbf{Villaverde} y \textbf{Salamanca} de Madrid, como ya se ha explicado en apartados anteriores. El resultado es un \textbf{CSV} con un registro por cada una de dichas viviendas y sus \textbf{planos} incluidos en los anuncios de Idealista, mientras que si el anuncio es de Fotocasa se han descargado todas las \textbf{fotografías} al carecer de la opción específica del plano. 
+En \textbf{este proyecto} se analizan dichos portales inmobiliarios y se vuelca en el \textit{dataset} final la información de los anuncios sobre \textbf{viviendas en venta} en \textbf{Fotocasa e Idealista}, en concreto de los distritos de \textbf{Villaverde} y \textbf{Salamanca} de Madrid, como ya se ha explicado en apartados anteriores. El resultado es un \textbf{CSV} con un registro por cada una de dichas viviendas y sus \textbf{planos} incluidos en los anuncios de Idealista, mientras que si el anuncio es de Fotocasa se han descargado todas las \textbf{fotografías} al carecer de la opción específica del plano. 
 
 \vspace{-1.5em}\section{Contenido}\vspace{-1.0em}
 
@@ -286,7 +286,7 @@ Así, esta carga diferida supuso un reto a la hora de obtener la información ge
 
 Otro obstáculo solventado es que \textbf{las clases} y, en ocasiones, los \textbf{\textit{div}} en los que se aloja la información de cada inmueble en las páginas que muestran los listados de resultados según la ubicación no son los mismos. Esto quiere decir que la estructura del portal cambia a medida que se avanza por estos listados a través de las diferentes páginas de una misma ubicación, progresión que también se hace simulando un clic sobre el botón de \textit{página siguiente} emulando el comportamiento humano con Selenium. 
 
-Para saltar la traba de la estructura diferente, que provocaba que solo se pudiera almacenar información del 8\% de los inmuebles, se opta por evaluar la ubicación a \textit{scrapear} en cada caso, de manera que el programa ya detecta cuál es la estructura prevista debido a que se ha adaptado el código a cada una de ellas.
+Para saltar la traba de la estructura variable, que provocaba que solo se pudiera almacenar información del 8\% de los inmuebles, se opta por evaluar la ubicación a \textit{scrapear} en cada caso, de manera que el programa ya detecta cuál es la estructura prevista debido a que se ha adaptado el código a cada una de ellas.
 
 \vspace{-1.5em}\subsection*{Detalles del \textit{scraper} de Idealista}\vspace{-1em}
 
@@ -294,13 +294,13 @@ El portal inmobiliario \textbf{Idealista} cuenta con un sistema de bloqueos para
 
 Debido a todas las salvaguardas para evitar la detección de Idealista, el \textit{scraper} de este portal inmobiliario dedica mucho tiempo a las esperas activas, dilatando en gran medida el tiempo requerido para obtener toda la información del sitio web. 
 
-Una consecuencia de que la ejecución completa del programa se extienda tanto en el tiempo es que la fase de pruebas es muy costosa. Así mismo, si sucede un error inesperado (dentro o fuera del programa) y el \textit{scraper} se bloquea, con el coste que esto supone.
+Una consecuencia de que la ejecución completa del programa se extienda tanto en el tiempo es que la fase de pruebas es muy costosa. Así mismo, si sucede un error inesperado (dentro o fuera del programa) y el \textit{scraper} se bloquea, el coste también es muy grande.
 
 Teniendo estas consideraciones en mente, se ha decidido implementar un sistema de recuperación (\textit{backup}) y reanudación del \textit{scraping} mediante una sincronización cada \verb|X| \textit{links} visitados.
 
 El \textbf{proceso de sincronización} utiliza un sistema de semáforos y eventos para controlar el número de páginas visitadas por el \textit{scraper} de navegación los \textit{scrapers} de inmuebles; para poder obtener una nueva página que visitar, los procesos tienen que pedir turno primero al semáforo, que solo tiene \verb|X| huecos disponibles. Una vez los huecos del semáforo se acaban, los procesos avisan al evento y se ponen a la cola para poder obtener un nuevo \textit{link} cuando haya hueco disponible.
 
-El proceso principal espera a que se lance el evento para comenzar su procedimiento de sincronización: primero espera a que los procesos en curso queden a la espera de nuevos turnos en el semáforo, luego lanza el sistema de recuperación y reanudación, y finalmente libera los huecos del semáforo y da el evento como proesado y terminado.
+El proceso principal espera a que se lance el evento para comenzar su procedimiento de sincronización: primero espera a que los procesos en curso queden a la espera de nuevos turnos en el semáforo, luego lanza el sistema de recuperación y reanudación, y finalmente libera los huecos del semáforo y da el evento como procesado y terminado.
 
 Este \textbf{sistema de recuperación y reanudación} funciona de tal manera que se guardan en disco y se recuperan unos objetos de estado, concretamente una lista de los \textit{links} de navegación que quedan por visitar, una lista de los \textit{links} de inmuebles por visitar y una lista de la información de los inmuebles que hay que guardar en disco en la próxima sincronización.
 
@@ -312,13 +312,13 @@ A continuación se procede a describir los distintos campos del conjunto de dato
 
 \begin{itemize}[topsep=0cm,partopsep=0cm]
 	\setlength\itemsep{-0.5em}
-	\item \textbf{id}: entero con el identificador numérico del inmueble, dado por Idealista o Fotocasa.
+	\item \textbf{\textit{id}}: entero con el identificador numérico del inmueble, dado por Idealista o Fotocasa.
 	\item \textbf{\textit{source}}: cadena de texto que identifica la fuente de la que se ha obtenido la información del inmueble (\verb|"fotocasa"/"idealista"|).
-	\item \textbf{url}: cadena de texto con la dirección de la página web de la que se ha obtenido la información del inmueble.
+	\item \textbf{\textit{url}}: cadena de texto con la dirección de la página web de la que se ha obtenido la información del inmueble.
 	\item \textbf{\textit{title}}: cadena de texto con el título del anuncio del inmueble.
 	\item \textbf{\textit{location}}: cadena de texto con el barrio al que pertenece el inmueble \\ (\verb|"barrio-de-salamanca"/"villaverde"|).
 	\item \textbf{\textit{price}}: entero o cadena de texto con el precio del inmueble fijado en el anuncio.
-	\item \textbf{m2}: entero con los m\textsuperscript{2} (metros cuadrados) del inmueble.
+	\item \textbf{\textit{m2}}: entero con los m\textsuperscript{2} (metros cuadrados) del inmueble.
 	\item \textbf{\textit{rooms}}: entero con el número de habitaciones del inmueble. El campo puede estar vacío.
 	\item \textbf{\textit{floor}}: cadena de texto con el piso o planta del inmueble. Puede contener información adicional, como por ejemplo si se trata de un inmueble con ascensor o una orientación interior o exterior.
 	\item \textbf{\textit{num-photos}}: entero con el número de fotografías disponibles en el anuncio.
@@ -330,21 +330,23 @@ A continuación se procede a describir los distintos campos del conjunto de dato
 	\item \textbf{\textit{photo\_urls}}: lista con las direcciones de las fotografías del inmueble anunciado.
 \end{itemize}
 
+Además del CSV, como se ha señalado en secciones anteriores, se han descargado todos los \textbf{planos} incluidos en las viviendas de los anuncios de Idealista. Al carecer de esta posibilidad en Fotocasa, se opta por la descarga de todas las \textbf{fotografías} del anuncio. Este material audiovisual tiene restricciones de \textbf{\textit{copyright}}, por lo que no se ha publicado en Zenodo, pero sí a la carpeta privada de Google Drive. 
+
 \vspace{-1.5em}\section{Agradecimientos}\vspace{-1.0em}
 
-A continuación se aborda el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y la necesidad de diferenciar claramente entre ellos. 
+A continuación, se aborda el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y a la necesidad de diferenciar claramente entre ellos. 
 
 \vspace{-1.5em}\subsection*{Propietarios de los datos}\vspace{-1.0em}
 
 Como se ha indicado en otros apartados, este es un proyecto en el que se integran \textbf{dos fuentes de datos} diferentes, con sus respectivos propietarios de los datos. 
 
-Por un lado, sobre el portal web \href{http://www.idealista.com}{Idealista}, cuyo fundador y CEO es Jesús Encinar, es importante destacar que la empresa está registrada como una Sociedad Anónima Unipersonal (Idealista S.A.U.) fundada en el año 2000, aunque en la actualidad está participada mayoritariamente por los fondos gestionados por EQT. En estos momentos, opera además en Portugal e Italia, países en los que no se centra este proyecto, pero cuya estructura de la web es idéntica, con todo lo que esto implica. 
+Por un lado, sobre el portal web \href{http://www.idealista.com}{\textbf{\underline{Idealista}}}, cuyo fundador y CEO es Jesús Encinar, es importante destacar que la empresa está registrada como una Sociedad Anónima Unipersonal (Idealista S.A.U.) fundada en el año 2000, aunque en la actualidad está participada mayoritariamente por los fondos gestionados por EQT. En estos momentos, opera además en Portugal e Italia, países en los que no se centra este proyecto, pero cuya estructura de la web es idéntica, con todo lo que esto implica. 
 
 Explorando el dominio mediante \textit{whois} de python, se obtienen otros datos del mismo, como que su fecha de creación fue el 21 de agosto de 1999 y otra información irrelevante en este punto.
 
-Por otro lado, según explican ellos mismos y se puede verificar en gran medida en el desarrollo del código, el \textbf{desarrollo de software} de idealista usa como base el sistema de arquitectura LEMP (Linux, Nginx, MySql, PHP) además de otras herramientas, como bases de datos (Oracle y SQLite), motores de búsqueda fulltext (Sphinxsearch y Solr), lenguajes de programación PHP en sus versiones 5.6 y 7.1 ó JavaScript, y Laravel y Lumen como frameworks para el desarrollo de aplicaciones.
+Por otro lado, según explican ellos mismos y se puede verificar en gran medida en el desarrollo del código, el \textbf{desarrollo de software} de Idealista usa como base el sistema de arquitectura LEMP (Linux, Nginx, MySql, PHP) además de otras herramientas, como bases de datos (Oracle y SQLite), motores de búsqueda fulltext (Sphinxsearch y Solr), lenguajes de programación PHP en sus versiones 5.6 y 7.1 ó JavaScript, y Laravel y Lumen como frameworks para el desarrollo de aplicaciones.
 
-En cuanto al portal web \href{https://www.fotocasa.es/es/}{Fotocasa}, pertenece a Adevinta Spain S.L.U., empresa que también es propietaria del portal inmobiliario \href{https://www.habitaclia.com/madrid}{Habitaclia}, y se fundó en 1999. Al contrario que con Idealista, la estructura de los portales de los que Adevinta es propietaria es diferente en cada caso. Con Fotocasa no se obtiene ningún tipo de información del dominio mediante \textit{whois}. 
+En cuanto al portal web \href{https://www.fotocasa.es/es/}{\textbf{\underline{Fotocasa}}}, pertenece a Adevinta Spain S.L.U., empresa que también es propietaria del portal inmobiliario \href{https://www.habitaclia.com/madrid}{\underline{Habitaclia}}, y se fundó en 1999. Al contrario que con Idealista, la estructura de los portales de los que Adevinta es propietaria es diferente en cada caso. Con Fotocasa no se obtiene ningún tipo de información del dominio mediante \textit{whois}. 
 
 En este sentido, la empresa es menos transparente en cuanto a cómo está \textbf{desarrollado} el portal, aunque sí que se ha detectado el uso de bases de datos, motores de búsquedas y lenguajes de programación PHP y JavaScript.
 
@@ -354,45 +356,45 @@ Idealista y Fotocasa han sido objeto de análisis en varias ocasiones, y los que
 
 La razón de esto reside en que el corazón de su negocio son los datos y cualquiera que se haga con ellos puede obtener una ventaja competitiva indeseable para ambos portales. Es por este motivo por el que sus equipos de desarrolladores son especialmente conocidos por intentar poner trabas a estas prácticas que, como se verá en el siguiente apartado, de manera explícita ellos prohíben realizar.
 
-En el contexto del Máster en Inteligencia Artificial aplicada a los Mercados Financieros (mIA-X) del Instituto BME, David Carrasco Cuñado desarrolló un proyecto para \textit{scrapear} \textbf{Idealista}, cuyo código se puede encontrar en \href{https://github.com/David-Carrasco/Scrapy-Idealista}{este repositorio} de GitHub y tiene como última actualización octubre de 2020. 
+En el contexto del Máster en Inteligencia Artificial aplicada a los Mercados Financieros (mIA-X) del Instituto BME, David Carrasco Cuñado desarrolló un proyecto para \textit{scrapear} \textbf{Idealista}, cuyo código se puede encontrar en \href{https://github.com/David-Carrasco/Scrapy-Idealista}{\underline{este repositorio}} de GitHub y tiene como última actualización octubre de 2020. 
 
 Este repositorio es el más completo que se ha encontrado que se aproxime a los objetivos del proyecto descrito en este informe y únicamente permite registrar la información de cada uno de los inmuebles que aparecen en la \textbf{primera página de una URL} dada con una ubicación en concreto, extrayendo los datos únicamente de esta dirección sin entrar a ver los detalles en las páginas correspondientes de cada una de las viviendas. 
 
-El tutorial \textbf{más completo} es el ofrecido por el usuario de YouTube Code Monkey King, que se puede ver en \href{https://www.youtube.com/watch?v=4Tv73KuqgVo}{este vídeo}. El punto de entrada son códigos postales y enseña a descargar todos los datos tanto de las páginas de localización en las que se encuentran los listados de inmuebles como de las URL con cada uno de ellos. Por tanto, aunque no proporcione el código ejecutable de una forma directa, se trata de una pieza completa e interesante. 
+El tutorial \textbf{más completo} es el ofrecido por el usuario de YouTube Code Monkey King, que se puede ver en \href{https://www.youtube.com/watch?v=4Tv73KuqgVo}{\underline{este vídeo}}. El punto de entrada son códigos postales y enseña a descargar todos los datos tanto de las páginas de localización en las que se encuentran los listados de inmuebles como de las URL con cada uno de ellos. Por tanto, aunque no proporcione el código ejecutable de una forma directa, se trata de una pieza completa e interesante. 
 
-Por su parte, Miguel Ángel Gisbert publicó en junio de 2021 un tutorial sobre cómo \textit{scrapear} los datos de una vivienda dada la URL de la misma, que se puede consultar en \href{https://www.youtube.com/watch?v=2UyJv5oe570}{este vídeo}. Al igual que el proyecto anterior, no realiza ningún análisis una vez obtenidos los datos. 
+Por su parte, Miguel Ángel Gisbert publicó en junio de 2021 un tutorial sobre cómo \textit{scrapear} los datos de una vivienda dada la URL de la misma, que se puede consultar en \href{https://www.youtube.com/watch?v=2UyJv5oe570}{\underline{este vídeo}}. Al igual que el proyecto anterior, no realiza ningún análisis una vez obtenidos los datos. 
 
-En cuanto a Idealista, ya no destacan más ejemplos que merezcan una especial mención puesto que no se acercan remotamente a los objetivos de este proyecto. Por ejemplo, se ha encontrado \href{https://medium.com/@rubenmarcos/crear-una-base-de-datos-de-la-evoluci%C3%B3n-del-mercado-inmobiliario-con-idealista-y-r-y-sin-scraping-1d5025a9d47e}{una alternativa} al \textit{scraping} directo del portal mediante el análisis con R de la propia bandeja de entrada del \textbf{correo electrónico}, al que llega información de los pisos que cumplen los requisitos a los que el usuario se ha suscrito.
+En cuanto a Idealista, ya no destacan más ejemplos que merezcan una especial mención puesto que no se acercan remotamente a los objetivos de este proyecto. Por ejemplo, se ha encontrado \href{https://medium.com/@rubenmarcos/crear-una-base-de-datos-de-la-evoluci%C3%B3n-del-mercado-inmobiliario-con-idealista-y-r-y-sin-scraping-1d5025a9d47e}{\underline{una alternativa}} al \textit{scraping} directo del portal mediante el análisis con R de la propia bandeja de entrada del \textbf{correo electrónico}, al que llega información de los pisos que cumplen los requisitos a los que el usuario se ha suscrito.
 
-Respecto a \textbf{Fotocasa}, los compañeros Irene Fernández Molina y Héctor Hernández Membiela en el contexto académico de esta misma asignatura en abril de 2019 desarrollaron un proyecto de \textit{web scraping} en el que este era uno de los dos sitios web del que realizaban la captura de datos. Como se puede observar en \href{https://github.com/EdelBlau/PEC_TPC}{su repositorio}, sin embargo, toda la información que se extrae se encuentra en las páginas en las que se muestra el \textbf{listado de inmuebles} y no se propone una extracción de la información que contiene cada una de las páginas de los mismos. 
+Respecto a \textbf{Fotocasa}, los compañeros Irene Fernández Molina y Héctor Hernández Membiela en el contexto académico de esta misma asignatura en abril de 2019 desarrollaron un proyecto de \textit{web scraping} en el que este era uno de los dos sitios web del que realizaban la captura de datos. Como se puede observar en \href{https://github.com/EdelBlau/PEC_TPC}{\underline{su repositorio}}, sin embargo, toda la información que se extrae se encuentra en las páginas en las que se muestra el \textbf{listado de inmuebles} y no se propone una extracción de la información que contiene cada una de las páginas de los mismos. 
 
-También en el ámbito académico, el Trabajo de Fin de Máster (TFM) de Álvaro Torrente Patiño del Máster de Ciberseguridad de la Universidade da Coruña también trabajaba sobre el \textit{web scraping} de portales inmobiliarios, entre los que se encontraba Fotocasa según ha explicado él mismo en LinkedIn, pero el portal de la facultad en el que está colgado \href{http://castor.det.uvigo.es:8080/xmlui/bitstream/handle/123456789/575/TorrentePatino_Alvaro_TFM_2021.pdf?sequence=1&isAllowed=y}{dicho trabajo} ha estado caído durante todo el desarrollo de este proyecto, por lo que no se ha podido estudiar su trabajo previo. 
+También en el ámbito académico, el Trabajo de Fin de Máster (TFM) de Álvaro Torrente Patiño del Máster de Ciberseguridad de la Universidade da Coruña trabajaba sobre el \textit{web scraping} de portales inmobiliarios, entre los que se encontraba Fotocasa según ha explicado él mismo en LinkedIn, pero el portal de la facultad en el que está colgado \href{http://castor.det.uvigo.es:8080/xmlui/bitstream/handle/123456789/575/TorrentePatino_Alvaro_TFM_2021.pdf?sequence=1&isAllowed=y}{\underline{dicho trabajo}} ha estado caído durante todo el desarrollo de este proyecto, por lo que no se ha podido estudiar su trabajo previo. 
 
-Por otro lado, el usuario de YouTube Fpred publicó en octubre de 2020 un \textbf{pequeño tutorial} en el que explica cómo enfrentarse al \textit{lazy loading} de la web de Fotocasa para obtener los precios de todas las viviendas que aparecen en cada página del listado cuando se busca una localización, como se puede ver en \href{https://www.youtube.com/watch?v=WMjV7rF3oX8}{este vídeo}, pero no profundiza en ningún otro aspecto adicional. 
+Por otro lado, el usuario de YouTube Fpred publicó en octubre de 2020 un \textbf{pequeño tutorial} en el que explica cómo enfrentarse al \textit{lazy loading} de la web de Fotocasa para obtener los precios de todas las viviendas que aparecen en cada página del listado cuando se busca una localización, como se puede ver en \href{https://www.youtube.com/watch?v=WMjV7rF3oX8}{\underline{este vídeo}}, pero no profundiza en ningún otro aspecto adicional. 
 
-En relación a \textbf{análisis} en sí mismos, no se ha encontrado ninguno relevante ni con datos descargados de Idealista ni de Fotocasa más allá que los que ellos publican en sus respectivos portales web. Así, cabe destacar, por último, que es probable que existan \textbf{empresas} que hayan realizado proyectos para obtener la información de estos dos portales web, pero no se han hecho públicos y por tanto, no se han podido tener en cuenta para esta fase del proyecto. 
+En relación a \textbf{análisis} en sí mismos, no se ha encontrado ninguno relevante ni con datos descargados de Idealista ni de Fotocasa más allá que los que ellos publican en sus respectivos portales web. Así, cabe destacar, por último, que es probable que existan \textbf{empresas} que hayan realizado proyectos para obtener la información de estos dos portales web, pero no se han hecho públicos y, por tanto, no se han podido tener en cuenta para esta fase del proyecto. 
 
 \vspace{-1.5em}\subsection*{Pasos para actuar con principios éticos y legales}\vspace{-1.0em}
 
 Este es uno de los apartados \textbf{más complejos} del proyecto y que se ha tratado con especial sensibilidad.
 
-Según se recoge en el fichero \href{https://www.idealista.com/robots.txt}{robots.txt} de \textbf{Idealista}, están específicamente no permitidas algunas de las acciones contempladas en este proyecto, como la navegación a través de la \textbf{paginación} (\verb|Disallow: /*/pagina-*.htm|) o el empleo de más de dos \textbf{filtros} (\verb|Disallow: /venta-*,*,*,| o \verb|Disallow: /venta-*,|), cuando en este caso se están empleando tres: viviendas + Madrid + distrito. 
+Según se recoge en el fichero \href{https://www.idealista.com/robots.txt}{\underline{robots.txt}} de \textbf{Idealista}, están específicamente no permitidas algunas de las acciones contempladas en este proyecto, como la navegación a través de la \textbf{paginación} (\verb|Disallow: /*/pagina-*.htm|) o el empleo de más de dos \textbf{filtros} (\verb|Disallow: /venta-*,*,*,| o \verb|Disallow: /venta-*,|), cuando en este caso se están empleando tres: viviendas + Madrid + distrito. 
 
-Según se recoge en el fichero \href{https://www.fotocasa.es/robots.txt}{robots.txt} de \textbf{Fotocasa}, por su parte el portal es mucho menos restrictivo. Sin embargo, también está especificado que no se permite la navegación a través de la \textbf{paginación} a partir de la cuarta incluida (\verb|Disallow: */l/4*| hasta \verb|Disallow: */l/39*|), condición necesaria para el proyecto planteado.
+Según se recoge en el fichero \href{https://www.fotocasa.es/robots.txt}{\underline{robots.txt}} de \textbf{Fotocasa}, por su parte, este portal es mucho menos restrictivo. Sin embargo, también está especificado que no se permite la navegación a través de la \textbf{paginación} a partir de la cuarta incluida (\verb|Disallow: */l/4*| hasta \verb|Disallow: */l/39*|), condición necesaria para el proyecto planteado.
 
 No obstante, para la búsqueda de las viviendas de cada distrito no se incumple ninguna restricción ya que, según la construcción de la URL no está especificada como tal. Por ejemplo, el archivo indica \verb|Disallow: /*filter=*| pero la URL de Villaverde es \verb|/es/comprar/viviendas/madrid-capital/villaverde/l?sortType=scoring|. Este tipo de \textit{sortType} es el único permitido, por lo que tampoco entra en conflicto con las indicaciones del propietario. 
 
 Así, y teniendo en cuenta que estas restricciones son ``solo una sugerencia y \textbf{nunca una obligación}'', tal y como se señala en \citetitle{tip2}\cite{tip2}, además de tenerlas en cuenta para reducir las posibilidades de ser bloqueados, se decide que este proyecto tenga una finalidad \textbf{exclusivamente educativa}. 
 
-Es interesante que trabajando ambos portales, las posibilidades de aprendizaje se disparan exponencialmente, no obstante, no se debe olvidar la voluntad de los propietarios de los mismos. Por ello, en todo momento se intenta mantener el equilibrio y sobre todo, \textbf{respeto} hacia Idealista y Fotocasa. 
+Es interesante que trabajando ambos portales, las posibilidades de aprendizaje se disparan exponencialmente, no obstante, no se debe olvidar la voluntad de los propietarios de los mismos. Por ello, en todo momento se intenta mantener el equilibrio y, sobre todo, \textbf{respeto} hacia Idealista y Fotocasa. 
 
 \vspace{-1.5em}\subsection*{Agradecimiento final}\vspace{-1.0em}
 
 Debido a todo lo expuesto en apartados anteriores, se agradece tanto a \textbf{Idealista} como a \textbf{Fotocasa} el haber servido como soporte para el proceso de aprendizaje que se ha desarrollado durante este proyecto de captura de datos, los cuales serán empleados con un fin exclusivamente académico. 
 
-Además, se hace extensible este agradecimiento a las personas mencionadas en \textbf{trabajos anteriores} por haber hecho público el conocimiento que han adquirido y que ha servido de punto de partida para este proyecto o para solventar obstáculos que nos hemos encontrado. 
+Además, se hace extensible este agradecimiento a las personas mencionadas en \textbf{trabajos anteriores} por haber hecho público el conocimiento que han adquirido y que ha servido de punto de partida para este proyecto o para solventar obstáculos encontrados durante el desarrollo. 
 
-Por último, se agradece también a Armin Sebastian, creador de la extensión \href{https://chrome.google.com/webstore/detail/buster-captcha-solver-for/mpbjkejclgfgadiemmefgebjfooflfhl}{Buster: Captcha Solver for Humans}, que ha hecho factible realizar \textit{web scrapping} sobre Idealista; y al sitio web \href{https://hidemy.name/proxy-list/}{hidemy.name} por su base de datos de \textit{proxies}.
+Por último, se agradece también a \textbf{Armin Sebastian}, creador de la extensión \href{https://chrome.google.com/webstore/detail/buster-captcha-solver-for/mpbjkejclgfgadiemmefgebjfooflfhl}{\underline{Buster: Captcha Solver for Humans}}, que ha hecho factible realizar \textit{web scrapping} sobre Idealista, y al sitio web \href{https://hidemy.name/proxy-list/}{\underline{\textbf{hidemy.name}}} por su base de datos de \textit{proxies}.
 
 \vspace{-1.5em}\section{Inspiración}\vspace{-1em}
 
@@ -402,11 +404,11 @@ En este sentido, no es necesario extenderse mucho más puesto que en la sección
 
 El conjunto de datos resultante de este proyecto da un paso en esta dirección porque la captura se ha realizado de los dos portales inmobiliarios más empleados en España, por lo que los datos se pueden considerar suficientemente \textbf{representativos} para los análisis posteriores. 
 
-Así, en ningún proyecto publicado hasta la fecha (o por lo menos al que haya llegado en la fase de investigación) se integra información de Idealista y de Fotocasa; tampoco existen informes que aborden las diferencias de las viviendas en venta en los \textbf{dos barrios o distritos} con los precios más extremos dentro de una localidad, lo cual es interesante justo en un momento en el que la crisis provocada por la pandemia de coronavirus ha potenciado la desigualdad, tal y como concluyen los informes de 2022 de \href{https://www.foessa.es/blog/foessa-presenta-la-primera-radiografia-social-completa-de-la-crisis-de-la-covid-19-en-toda-espana/}{FOESSA}, \href{https://oxfamilibrary.openrepository.com/bitstream/handle/10546/621341/bp-inequality-kills-170122-es.pdf}{Oxfam International} y \href{https://elobservatoriosocial.fundacionlacaixa.org/documents/22890/492074/T01_ID_ES_AyalaCant%C3%B3.pdf/a0746431-109f-e009-6c77-296c378f0438?t=1642072938395}{Observatorio Social de La Caixa}.
+Así, en ningún proyecto publicado hasta la fecha (o por lo menos al que haya llegado en la fase de investigación) se integra información de Idealista y de Fotocasa. En este sentido, tampoco existen informes que aborden las diferencias de las viviendas en venta en los \textbf{dos barrios o distritos} con los precios más extremos dentro de una localidad, lo cual es interesante justo en un momento en el que la crisis provocada por la pandemia de coronavirus ha potenciado la desigualdad, tal y como concluyen los informes de 2022 de \href{https://www.foessa.es/blog/foessa-presenta-la-primera-radiografia-social-completa-de-la-crisis-de-la-covid-19-en-toda-espana/}{\underline{FOESSA}}, \href{https://oxfamilibrary.openrepository.com/bitstream/handle/10546/621341/bp-inequality-kills-170122-es.pdf}{\underline{Oxfam International}} y \href{https://elobservatoriosocial.fundacionlacaixa.org/documents/22890/492074/T01_ID_ES_AyalaCant%C3%B3.pdf/a0746431-109f-e009-6c77-296c378f0438?t=1642072938395}{\underline{Observatorio Social de La Caixa}}.
 
 La ciudad de \textbf{Madrid} ha sido la elegida para la captura de datos porque se trata de la más poblada de España, 3.305.408 personas a 1 de enero de 2022 según los datos del INE. Sin embargo, no existe consenso sobre si es la más cara en cuanto a la media de precio por metro cuadrado de vivienda en venta, situándose por detrás de San Sebastián y Barcelona dependiendo de la fuente consultada. 
 
-Por otro lado, a pesar de no haber fuentes oficiales actualizadas, \href{https://www.fotocasa.es/fotocasa-life/compraventa/conoce-el-precio-de-la-vivienda-en-venta-este-mes/}{Fotocasa} e \href{https://www.idealista.com/sala-de-prensa/informes-precio-vivienda/venta/madrid-comunidad/madrid-provincia/madrid/}{Idealista} coinciden en sus informes en que el distrito más caro de la capital es el de \textbf{Salamanca} y el más barato el de \textbf{Villaverde}, por lo que estos son los que serán objeto del análisis final tras la captura realizada en esta fase del proyecto.
+Por otro lado, a pesar de no haber fuentes oficiales actualizadas, \href{https://www.fotocasa.es/fotocasa-life/compraventa/conoce-el-precio-de-la-vivienda-en-venta-este-mes/}{\underline{Fotocasa}} e \href{https://www.idealista.com/sala-de-prensa/informes-precio-vivienda/venta/madrid-comunidad/madrid-provincia/madrid/}{\underline{Idealista}} coinciden en sus informes en que el distrito más caro de la capital es el de \textbf{Salamanca} y el más barato el de \textbf{Villaverde}, por lo que estos son los que serán objeto del análisis final tras la captura realizada en esta fase del proyecto.
 
 Una vez seleccionados los distritos, se verifica que no es útil el Anuario Estadístico de la Comunidad de Madrid (1985-2022) ni otros estudios oficiales, desactualizados o que no abordan este tipo de estudios, por lo que permitirá aportar conocimiento sobre este campo de estudio. 
 
@@ -414,7 +416,7 @@ Teniendo en cuenta esta información, las preguntas que se pretenden resolver en
 \begin{enumerate}[topsep=0cm,partopsep=0cm,wide]
 	\item \textbf{Comparativa entre distritos}: 
 		\begin{itemize}[topsep=0cm,partopsep=0cm]
-			\item Obviando su geolocalización, ¿Cuáles son las diferencias entre las viviendas de ambos distritos? Entre las características a estudiar se encontrarían los m\textsuperscript{2}, el número de baños, el número de habitaciones, el tipo de vivienda, el año de construcción o los precios.
+			\item Obviando su geolocalización, ¿cuáles son las diferencias entre las viviendas de ambos distritos? Entre las características a estudiar se encontrarían los m\textsuperscript{2}, el número de baños, el número de habitaciones, el tipo de vivienda, el año de construcción o los precios.
 			
 			\item ¿Son los anuncios en un distrito por norma general más completos que en el otro? La respuesta a esta pregunta puede arrojar luz sobre si en un distrito es más sencillo vender un inmueble y, por tanto, no es necesario crear anuncios con todo tipo de detalle.
 			
